// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Abilities/>  with data 1`] = `
<Abilities
  abilities={
    Array [
      Object {
        "ability": Object {
          "name": "swarm",
          "url": "https://pokeapi.co/api/v2/ability/68/",
        },
      },
      Object {
        "ability": Object {
          "name": "insomnia",
          "url": "https://pokeapi.co/api/v2/ability/15/",
        },
      },
    ]
  }
>
  <styled.div>
    <div
      className="sc-bdfBwQ igrNHI"
    >
      <styled.ul>
        <ul
          className="sc-dlfnbm cRIIBo"
        >
          <styled.div>
            <div
              className="sc-gsTCUz fTpxFK"
            >
              Abilities
            </div>
          </styled.div>
          <styled.li
            key="swarm"
          >
            <li
              className="sc-hKgILt iohYuH"
            >
              - 
              swarm
            </li>
          </styled.li>
          <styled.li
            key="insomnia"
          >
            <li
              className="sc-hKgILt iohYuH"
            >
              - 
              insomnia
            </li>
          </styled.li>
        </ul>
      </styled.ul>
    </div>
  </styled.div>
</Abilities>
`;

exports[`<Abilities/>  without data 1`] = `
<Abilities
  abilities={Array []}
>
  <styled.div>
    <div
      className="sc-bdfBwQ igrNHI"
    >
      <styled.ul>
        <ul
          className="sc-dlfnbm cRIIBo"
        >
          <styled.div>
            <div
              className="sc-gsTCUz fTpxFK"
            >
              Abilities
            </div>
          </styled.div>
        </ul>
      </styled.ul>
    </div>
  </styled.div>
</Abilities>
`;
